src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBShaderImageLoadStore_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBShaderImageLoadStore_StringErrorContext.class */
public final class ARBShaderImageLoadStore_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBindImageTexture(IIIZIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBShaderImageLoadStoreErrorContext");
        methods.put("glMemoryBarrier(I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBShaderImageLoadStoreErrorContext");
        return methods;
    }
}
